--- a/Bai3/Slide6.html
+++ b/Bai3/Slide6.html
@@ -25,5 +25,6 @@
         <img class="slide" src="images/slide6.jpg" alt="slide6">
     </div>
     <img src="images/slide6.jpg" alt="Ảnh 6">
+    <!-- ngu vl -->
 </body>
 </html>
