--- a/bai6/6a.html
+++ b/bai6/6a.html
@@ -24,6 +24,9 @@
             width: 50;
             text-align: center ;
         }
+        .center{
+             text-align: center;
+        }
     </style>
     <div class="container">
         <div class="logo">
@@ -32,12 +35,19 @@
     </div>
         <h2><b></b>Registration Form</h2>
         <p class="sub">Register your Jackson Electronics product here</p>
-        <form class>
-            <div class="row">
-            <label>First Name: </label>
+        <form>
+            <div>
+                <label>First Name: </label>
+            <div class="center">
+                <span>
+            
             <input type="text">
+            </span>
+            <span>
             <label>Last Name: </label>
             <input type="text">
+            </span>
+            </div>
         </div>
             <label>Address #1:</label>
             <input type="text">
